force-app/main/default/objects/Opportunity/fields/Account_is_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Account_is_Frozen__c</fullName>
    <formula>Account.Frozen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account is Frozen</label>
    <type>Checkbox</type>
</CustomField>