force-app/main/default/objects/Opportunity/fields/Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross Sell</label>
    <type>Checkbox</type>
</CustomField>