force-app/main/default/objects/Opportunity/fields/Red_Account__c.field-meta.xml
<CustomField>
    <fullName>Red_Account__c</fullName>
    <formula>Account.Red_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Red Account</label>
    <type>Checkbox</type>
</CustomField>