force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(
    OR(
        Account.ShippingCountry = &quot;USA&quot;,
        Account.ShippingCountry = &quot;US&quot;,
        Account.ShippingCountry = &quot;United States&quot;,
        Account.ShippingCountry = &quot;Canada&quot;,
        Account.ShippingCountry = &quot;CA&quot;,
        Account.ShippingCountry = &quot;Mexico&quot;
    ),
    &quot;AMER&quot;,
    IF(
        OR(
            Account.ShippingCountry = &quot;United Kingdom&quot;,
            Account.ShippingCountry = &quot;UK&quot;,
            Account.ShippingCountry = &quot;Germany&quot;,
            Account.ShippingCountry = &quot;France&quot;,
            Account.ShippingCountry = &quot;Spain&quot;,
            Account.ShippingCountry = &quot;Italy&quot;
            /* Add other EMEA countries here */
        ),
        &quot;EMEA&quot;,
        &quot;Other&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>