force-app/main/default/objects/Opportunity/recordTypes/BPC.recordType-meta.xml
<RecordType>
    <fullName>BPC</fullName>
    <active>true</active>
    <businessProcess>BPC</businessProcess>
    <label>BPC</label>
</RecordType>