force-app/main/default/objects/Opportunity/recordTypes/CLL.recordType-meta.xml
<RecordType>
    <fullName>CLL</fullName>
    <active>true</active>
    <businessProcess>CLL</businessProcess>
    <label>CLL</label>
</RecordType>