force-app/main/default/objects/Opportunity/recordTypes/IB.recordType-meta.xml
<RecordType>
    <fullName>IB</fullName>
    <active>true</active>
    <businessProcess>IB</businessProcess>
    <label>IB</label>
</RecordType>